--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
@@ -3,7 +3,7 @@
 {% set default_group_type = h.default_group_type('organization') %}
 
 {% block package_basic_fields_title %}
-  {{ form.input('title', id='field-title', label=_('Title'), placeholder=_('eg. A descriptive title'), value=data.title, error=errors.title, classes=['control-full', 'control-large'], attrs={'data-module': 'slug-preview-target', 'class': 'form-control'}) }}
+  {{ form.input('title', id='field-title', label=_('Dataset Title'), placeholder=_('eg. A descriptive titleeee'), value=data.title, error=errors.title, classes=['control-full', 'control-large'], attrs={'data-module': 'slug-preview-target', 'class': 'form-control'}) }}
 {% endblock %}
 
 {% block package_basic_fields_url %}
@@ -20,6 +20,9 @@
 <!-- {% block package_basic_fields_description %}
   {{ form.markdown('notes', id='field-notes', label=_('Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes) }}
 {% endblock %} -->
+<!-- <script>
+  document.getElementById("field-name").style.display = "none";
+</script> -->
 
 {% block package_basic_fields_tags %}
   {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
