--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
@@ -20,13 +20,11 @@
 <!-- {% block package_basic_fields_description %}
   {{ form.markdown('notes', id='field-notes', label=_('Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes) }}
 {% endblock %} -->
-<!-- <script>
-  document.getElementById("field-name").style.display = "none";
-</script> -->
+
 
 {% block package_basic_fields_tags %}
   {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
-  {{ form.input( id='field-tags', label=_('Tags'), placeholder=_('eg. economy, mental health, government'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
+  {{ form.input('tag_string', id='field-tags', label=_('Tags'), placeholder=_('eg. economy, mental health, government'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
 {% endblock %}
 <!-- <script>
       let tagsField = document.getElementById("field-tags");
