--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
@@ -26,11 +26,11 @@
   {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
   {{ form.input('tag_string', id='field-tags', label=_('Tags'), placeholder=_('eg. economy, mental health, government'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
 {% endblock %}
-<!-- <script>
-      let tagsField = document.getElementById("field-tags");
-      tagsField.style.display = "none";
+<script>
+      console.log(document.getElementById("field-tags").value);
+
     //  document.getElementsByName("tag_string").style.display = "none";
-</script> -->
+</script>
 
 <!-- {% block package_basic_fields_license %}
   <div class="form-group control-full">
