--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/package_basic_fields.html
@@ -21,15 +21,16 @@
   {{ form.markdown('notes', id='field-notes', label=_('Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes) }}
 {% endblock %} -->
 
-
+<div id="tagdiv">
 {% block package_basic_fields_tags %}
   {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
-  {{ form.input('tag_string', id='field-tags', label=_('Tags'), placeholder=_('eg. economy, mental health, government'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
+  {{ form.input('tag_string', id='field-tags', label=_(' tags'), placeholder=_('eg. economy, mental health, government'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
 {% endblock %}
+</div>
 <script>
-      console.log(document.getElementById("field-tags").value);
+      //console.log(document.getElementById("field-tags").value);
 
-    //  document.getElementsByName("tag_string").style.display = "none";
+     document.getElementById("tagdiv").style.display = "none";
 </script>
 
 <!-- {% block package_basic_fields_license %}
