--- a/src/ckanext-theme/ckanext/theme/templates/package/resource_read.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/resource_read.html
@@ -184,10 +184,10 @@
               <tr>
                 <th scope="row">{{ _('Format') }}</th>
                 <td>{{ res.format or res.mimetype_inner or res.mimetype or _('unknown') }}</td>
-              </tr>
+              </tr> 
               <tr>
                 <th scope="row">{{ _('License') }}</th>
-                <td>{% snippet "snippets/license.html", pkg_dict=pkg, text_only=True %}</td>
+                <td>{{ pkg_dict.license }}</td>
               </tr>
               {% for key, value in h.format_resource_items(res.items()) %}
                 {% if key not in ('created', 'metadata modified', 'last modified', 'format') %}
