--- a/src/ckanext-theme/ckanext/theme/templates/package/read.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/read.html
@@ -36,9 +36,9 @@
       {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources %}
   {% endblock %}
 
-  {% block package_tags %}
+  <!-- {% block package_tags %}
     {% snippet "package/snippets/tags.html", tags=pkg.tags %}
-  {% endblock %}
+  {% endblock %} -->
 
   {% block package_additional_info %}
     {% snippet "package/snippets/additional_info.html", pkg_dict=pkg %}
