--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
@@ -42,7 +42,7 @@
     </tr>
 
   </table>
-  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
   <script>
     let name = "{{pkg_dict.author}}".split(",");
@@ -86,7 +86,7 @@
 
   <div><strong> Technical Information </strong></div>
   <p>{{ pkg_dict.technicalInfo }}</p>
-  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
   <!-- Spatial Information -->
   <div><strong> Spatial Information </strong></div>
@@ -136,22 +136,34 @@
 
     }
   </script>
-  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
 
   <!-- Collection Dates -->
-  <div><strong> Collection Date </strong></div>
-  {% if pkg_dict.collectionEndDate %}
-  <p>{{ pkg_dict.collectionStartDate }} to {{ pkg_dict.collectionEndDate }} </p>
-  {%else%}
-  <p> {{ pkg_dict.collectionStartDate }} </p>
-  {%endif%}
-  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+   <br>
+   <div id="collectionStartDateDiv" style="display: none;">
+    <div><strong> Collection Start Date </strong></div>
+    <p>{{ pkg_dict.collectionStartDate }}</p>
+   </div>
+   <div id="collectionEndDateDiv" style="display: none;">
+    <div><strong> Collection End Date </strong></div>
+    <p>{{ pkg_dict.collectionEndDate }}</p>
+   </div>
+  
+   <script>
+    if("{{pkg_dict.collectionStartDate}}"){
+      document.getElementById("collectionStartDateDiv").style.display = "block";
+    }
+    if("{{ pkg_dict.collectionEndDate }}"){
+      document.getElementById("collectionEndDateDiv").style.display = "block";
+    }
+   </script>
+  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
   <!-- Related Resource Fields -->
   <div><strong> Related Resources</strong> </div>
   <pre id="relatedResourceField"></pre>
-  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
   <script>
     let type = "{{pkg_dict.relationType}}".split(",");
@@ -193,7 +205,7 @@
       </th>
     </tr>
   </table>
-  <hr style="height:2px;border-width:0;color:black;background-color:gray">
+  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 <br>
   <script>
     let aNum = "{{pkg_dict.awardNumber}}".split(",");
@@ -263,7 +275,8 @@
     }
 
   </script>
-<hr style="height:2px;border-width:0;color:black;background-color:gray">
+  <br><br>
+<!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
   <!-- Private Information -->
 
