--- a/src/ckanext-theme/ckanext/theme/templates/snippets/tag_list.html
+++ b/src/ckanext-theme/ckanext/theme/templates/snippets/tag_list.html
@@ -10,7 +10,7 @@
 #}
 {% set _class = _class or 'tag-list' %}
 {% block tag_list %}
-  <ul class="{{ _class }}">
+  <ul class="{{ _class }}" style="background-color: white; color: white;">
     {% for tag in tags %}
       <li>
         <a class="{% block tag_list_item_class %}tag{% endblock %}" href="{% url_for 'dataset.search', tags=tag.name %}">{{ tag.display_name|truncate(22) }}</a>
