--- a/src/ckanext-theme/ckanext/theme/templates/home/layout3.html
+++ b/src/ckanext-theme/ckanext/theme/templates/home/layout3.html
@@ -1,4 +1,7 @@
 <div role="main" class="hero">
+  <div class="container" style="align-items: center;">
+<h3>Welcome to RRES CKAN Data Repository</h3>
+</div>
   <div class="container">
     {% block search %}
       {% snippet 'home/snippets/search.html' %}
@@ -9,8 +12,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        {% block promoted %}
-          {% snippet 'home/snippets/promoted.html' %}
+        {% block featured_group %}
+          {% snippet 'home/snippets/featured_group.html' %}
         {% endblock %}
       </div>
       <div class="col-md-6">
