--- a/src/ckanext-theme/ckanext/theme/templates/home/snippets/stats.html
+++ b/src/ckanext-theme/ckanext/theme/templates/home/snippets/stats.html
@@ -2,25 +2,25 @@
 
 <div class="module-stats">
   <div class="card box">
-	  <h3>{{ _('{0} statistics').format(g.site_title) }}</h3>
+	  <h3>Data Repository Stats</h3>
     <ul>
       {% block stats_group %}
       <li>
         <a href="{{ h.url_for('dataset.search') }}">
           <strong>{{ h.SI_number_span(stats.dataset_count) }}</strong>
-          {{ _('dataset') if stats.dataset_count == 1 else _('datasets') }}
+          {{ _('dataset') if stats.dataset_count == 1 else _('Datasets') }}
         </a>
       </li>
       <li>
         <a href="{{ h.url_for('organization.index') }}">
           <strong>{{ h.SI_number_span(stats.organization_count) }}</strong>
-          {{ _('organization') if stats.organization_count == 1 else _('organizations') }}
+          {{ _('organization') if stats.organization_count == 1 else _('Organizations') }}
         </a>
       </li>
       <li>
         <a href="{{ h.url_for('group.index') }}">
           <strong>{{ h.SI_number_span(stats.group_count) }}</strong>
-          {{ _('group') if stats.group_count == 1 else _('groups') }}
+          {{ _('group') if stats.group_count == 1 else _('Groups') }}
         </a>
       </li>
       {% endblock %}
