--- a/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
+++ b/src/ckanext-theme/ckanext/theme/templates/package/snippets/additional_info.html
@@ -4,7 +4,7 @@
   {% set user = 'true' if can_edit else 'false' %}
 
 
- <style>
+  <style>
     table {
       font-family: arial, sans-serif;
       border-collapse: collapse;
@@ -90,7 +90,7 @@
   <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
 
   <!-- Spatial Information -->
-   
+
   <head>
     <title>Simple Leaflet Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
@@ -107,23 +107,23 @@
     </style>
   </head>
   <div id="spatialInfo" style="display: none;">
-  <div><strong> Spatial Information </strong></div>
-  <pre>
+    <div><strong> Spatial Information </strong></div>
+    <pre>
   <strong>Geolocation Point</strong> 
     (Latitude, Longitude) : ( {{ pkg_dict.geoLatitude }}, {{ pkg_dict.geoLongitude }} ) 
   </pre>
-  <pre id="geoBox" style="display: none;">
+    <pre id="geoBox" style="display: none;">
   <strong>Geolocation Box:</strong>
      Lower Left Corner (Latitude,Longitude): ( {{ pkg_dict.geoLowLeftLatitude }}, {{ pkg_dict.geoLowLeftLongitude }} ) 
      Top Right Corner (Latitude,Longitude): ( {{ pkg_dict.geoTopRightLatitude }}, {{ pkg_dict.geoTopRightLongitude }} ) 
   </pre>
 
-  <div id="mapid" ></div>
-</div>
+    <div id="mapid"></div>
+  </div>
   <script>
     let x = parseFloat("{{ pkg_dict.geoLatitude }}");
     let y = parseFloat("{{ pkg_dict.geoLongitude }}");
-    if(x || y || "{{ pkg_dict.geoLowLeftLatitude }}"){
+    if (x || y || "{{ pkg_dict.geoLowLeftLatitude }}") {
       document.getElementById("spatialInfo").style.display = "block";
     }
     var mymap = L.map('mapid').setView([x, y], 13);
@@ -187,59 +187,43 @@
       p.append("\n");
     }
   </script>
-  <!-- Funder Information -->
-  <div><strong> Funder Information</strong></div>
-  <table id="funderTable" style="display: table; word-wrap: break-word; overflow: hidden;">
-    <tr style="color: #0e6633">
-      <th>
-        Award Number
-      </th>
-      <th>
-        Award Title
-      </th>
-      <th>
-        Award URI
-      </th>
-      <th>
-        Funder Name
-      </th>
-      <th>
-        Funder Identifier
-      </th>
-      <th>
-        Funder ID Type
-      </th>
-    </tr>
-  </table>
-  <!-- <hr style="height:2px;border-width:0;color:black;background-color:gray"> -->
-  <br>
-  <script>
-    let aNum = "{{pkg_dict.awardNumber}}".split(",");
-    let aTitle = "{{pkg_dict.awardTitle}}".split(",");
-    let aURI = "{{pkg_dict.awardURI}}".split(",");
-    let funder = "{{pkg_dict.funderName}}".split(",");
-    let idType = "{{ pkg_dict.funderIdType }}".split(",");
-    let fId = "{{ pkg_dict.funderId }}".split(",");
 
-    funTable = document.getElementById("funderTable");
-    for (let i = 0; i < aNum.length; i++) {
-      let row = funTable.insertRow();
-      let cell1 = row.insertCell();
-      let cell2 = row.insertCell();
-      let cell3 = row.insertCell();
-      let cell4 = row.insertCell();
-      let cell5 = row.insertCell();
-      let cell6 = row.insertCell();
+<!-- FUnder Information -->
+<div><strong> Funder Information</strong></div>
+<table id="funderTable" style="display: table; word-wrap: break-word; overflow: hidden; width: 100%;">
+  <tr style="color: #0e6633">
+    <th style="width: 20%;">
+      Award Number
+    </th>
+    <th style="width: 50%;">
+      Award Title
+    </th>
+    <th style="width: 30%;">
+      Funder Name
+    </th>
+  </tr>
+</table>
+<br>
+<script>
+  let aNum = "{{pkg_dict.awardNumber}}".split(",");
+  let aTitle = "{{pkg_dict.awardTitle}}".split(",");
+  let funder = "{{pkg_dict.funderName}}".split(",");
 
-      cell1.innerHTML = aNum[i];
-      cell2.innerHTML = aTitle[i];
-      cell3.innerHTML = aURI[i];
-      cell4.innerHTML = funder[i];
-      cell5.innerHTML = fId[i];
-      cell6.innerHTML = idType[i];
+  funTable = document.getElementById("funderTable");
+  for (let i = 0; i < aNum.length; i++) {
+    let row = funTable.insertRow();
+    let cell1 = row.insertCell();
+    let cell2 = row.insertCell();
+    let cell3 = row.insertCell();
 
-    }
-  </script>
+    let awardNum = aNum[i].replace(/\//g, "%2F");
+    let url = `https://gtr.ukri.org/projects?ref=${awardNum}`;
+
+    cell1.innerHTML = aNum[i];
+    cell2.innerHTML = `<a href="${url}">${aTitle[i]}</a>`;
+    cell3.innerHTML = funder[i];
+  }
+</script>
 
   <!-- Contributor Information -->
   <div id="contriDiv" style="display: none;">
@@ -413,7 +397,7 @@
           "@type": "Dataset",
           "name": name,
           "@id": name,
-          "description": "This resource is of type " + relatedType[index] +  ". This is related to  " + "{{ pkg_dict.name }}" + " as " + type[index],
+          "description": "This resource is of type " + relatedType[index] + ". This is related to  " + "{{ pkg_dict.name }}" + " as " + type[index],
           "creator": {
             "@type": "Person",
             "name": "N/A"
