--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -1,4 +1,6 @@
 {% ckan_extends %}
+{% import 'macros/form.html' as form %}
+
 
 {# You could remove 'free extras' from the package form like this, but we keep them for this example's tests.
 {% block author %}
